<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_data">No Result</string>
    <string name="action_settings">Settings</string>
    <string name="filter_header">Advanced Filters</string>
    <string name="filter_image_size">Image Size</string>
    <string name="filter_color_filter">Color Filter</string>
    <string name="filter_image_type">Image Type</string>
    <string name="filter_site_filter">Site Filter</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string-array name="filter_image_size_items">
        <item>none</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>extra large</item>
    </string-array>
    <string-array name="filter_color_filter_items">
        <item>none</item>
        <item>black</item>
        <item>blue</item>
        <item>green</item>
        <item>red</item>
        <item>yellow</item>
        <item>gray</item>
    </string-array>
    <string-array name="filter_type_items">
        <item>none</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
</resources>
